@@ -94,22 +94,21 @@ To get the challenge with SMTP:
 OPTIONAL SMTP AUTH CONFIGURATION
 --------------------------------
 
-If you need all users to send mail via an upstream SMTP provider
-(your ISP, for example), and that ISP requires authentication,
-there are two variables that can be added to config_local.php
-that will specify a sitewide SMTP username and password.
+In SMTP authentication SquirrelMail uses user's login name and password. If you 
+need all users to send mail via an upstream SMTP provider (your ISP, for 
+example), and that ISP requires authentication, you can configure custom 
+username and password. $smtp_sitewide_user configuration variable stores custom
+username used during SMTP authentication. $smtp_sitewide_pass stores custom
+password that is used during SMTP authentication, if $smtp_sitewide_user 
+variable is not empty.
 
-Set up SMTP authentication to the remote server according to the
-instructions above, then add the following to config_local.php,
-replacing <smtp_user> and <smtp_pass> with the username and password
-you'd like to use for the entire site:
+SquirrelMail 1.5.0 and 1.5.1 stored these configuration variables in 
+config_local.php. Newer SquirrelMail versions allow to configure them in conf.pl
+configuration utility.
 
-   $smtp_sitewide_user = '<smtp_user>';
-   $smtp_sitewide_pass = '<smtp_pass>';
-
-These values will be used to connect to the SMTP server as long
-as the authentication mechanism is something besides 'none', i.e.
-'login','plain','cram-md5', or 'digest-md5'.
+These configuration variables will be used to connect to the SMTP server as long
+as the authentication mechanism is something besides 'none', i.e. 'login', 
+'plain', 'cram-md5', or 'digest-md5'.
 
 DEBUGGING SSL ERROR MESSAGES
 ----------------------------
@@ -129,7 +128,7 @@ Possible error messages:
 
 * SSL operation failed with code 1. OpenSSL Error messages: error:14094410:SSL
 routines:func(148):reason(1040) in some script.
-  Error generated by SSL libraries. Locate numbers listed 'SSL
+  Error generated by SSL library. Locate numbers listed in 'SSL 
   routines:func(###):reason(####)' string, find ssl.h file in your OpenSSL
   sources and locate same numbers listed in '/* Error codes for the SSL
   functions. */' section. Error define can be self explanatory. If you don't
